# pyblish

./: .gitignore  README.md  ReadMe.ipynb  ReadMe.md  ReadMe.yml  pyblish.py
_filters_src/: Cargo.toml
_filters_src/src/: auto_hide.rs  flatten_ipynb.rs  hide.rs  latex_env.rs
_journals/: iacrtrans.yml  lipics.yml
_journals/iacrtrans/: style.css  style.css.map  style.scss  template.tex
_journals/lipics/: template.tex
