[package]
name = "pannb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pandoc = { git = "https://github.com/rloic/pandoc", branch = "pandoc/1.22.1" }
serde_json = "1.0.94"

[[bin]]
name = "hide"
path = "src/hide.rs"

[[bin]]
name = "flatten_ipynb"
path = "src/flatten_ipynb.rs"

[[bin]]
name = "auto_hide"
path = "src/auto_hide.rs"